--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "ARM_System/ROS/src_user/dynamixel_motor_library"]
 	path = ARM_System/ROS/src_user/dynamixel_motor_library
-	url = git://github.com/arebgun/dynamixel_motor.git
+	url = git://github.com/Castronauts/CASA.git
         ignore = dirty
