--- a/ARM_System/ROS/src_user/armstrong_master/package.xml
+++ b/ARM_System/ROS/src_user/armstrong_master/package.xml
@@ -57,6 +57,7 @@
   <build_depend>moveit_ros_planning_interface</build_depend>
   <build_depend>moveit_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>dynamixel_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>moveit_core</build_export_depend>
@@ -66,6 +67,7 @@
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>dynamixel_msgs</build_export_depend>
   <build_export_depend>tf</build_export_depend>
   <exec_depend>actionlib</exec_depend>
   <exec_depend>moveit_core</exec_depend>
@@ -75,6 +77,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>dynamixel_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
 
 
